# imagine_raytracing

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  rendu.ppm  report.typ  report1.typ
assets/shaders/: default.glsl  forward.glsl
assets/shaders/deferred/: object.glsl  screen.glsl
image_captures/: convert.fish  convert.sh
src/: Camera.cpp  Camera.h  Line.h  Material.h  Plane.h  Ray.h  Scene.h  Sphere.h  Square.h  Trackball.cpp  Triangle.h  Vec3.h  light.cpp  light.hpp  main.cpp  material.cpp  material.h  material.hpp  matrixUtilities.h  scene.cpp  scene.h  scene.hpp
src/geometry/: acceleration_structures.cpp  acceleration_structures.hpp  light.cpp  light.hpp  mesh.cpp  mesh.h  mesh.hpp  plane.cpp  plane.h  plane.hpp  ray.cpp  ray.h  ray.hpp  sphere.cpp  sphere.h  sphere.hpp  square.cpp  square.h  square.hpp  triangle.cpp  triangle.h  triangle.hpp
src/utils/: camera.cpp  camera.hpp  drawing_primitives.cpp  drawing_primitives.hpp  gl_utils.cpp  gl_utils.hpp  image.cpp  image.hpp  profiler.hpp  random.hpp  renderer.cpp  renderer.hpp  thread_group.cpp  thread_group.hpp
tp_utils/: CMakeLists.txt
tp_utils/src/: debug.hpp  inputs.cpp  inputs.hpp  source_preprocessing.cpp  source_preprocessing.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp  windowing.cpp  windowing.hpp
tp_utils/src/data_structures/: aabb.hpp  gradient.cpp  gradient.hpp  stack_vector.hpp
tp_utils/src/model_loaders/: off_object.cpp  off_object.hpp  wavefront_object.cpp  wavefront_object.hpp
tp_utils/src/rendering/: camera.cpp  camera.hpp  immediate_geometry.cpp  immediate_geometry.hpp  mesh.cpp  mesh.hpp  rendering.cpp  rendering.hpp
tp_utils/src/rendering/primitives/: framebuffer.cpp  framebuffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vbuffer.cpp  vbuffer.hpp
